Update 's5wahdfyw-nodejs' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-86e18fb83e.y1vs.p3.openshiftapps.com/rhtap/rhtap-qe-nodejs:b989324d565ba9c95ec29d0cec4cb012ff1991ac@sha256:e220c6985e6f2441f370fcad96538e5be700f9cb1310598702a8b2d7602e68a9

--- a/components/s5wahdfyw-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/s5wahdfyw-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: s5wahdfyw-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-86e18fb83e.y1vs.p3.openshiftapps.com/rhtap/rhtap-qe-nodejs:b989324d565ba9c95ec29d0cec4cb012ff1991ac@sha256:e220c6985e6f2441f370fcad96538e5be700f9cb1310598702a8b2d7602e68a9
+          name: container-image
